version 0.1.1

-------------------------------------------------------------------------------------------------------------------

Liste des modifications depuis le 11/06/2014 (0.1.1 à 0.1.2)
	-Fonctionalitées :
		-Ajout d'un module de prise de note
		-Affichage et utilisation des contexts
	
	-Interface Utilisateurs :
		-Affichage des différents logs (message et couleurs en fonction du type). (ace69c5ca)
		-Inversion des positions des listes déroulantes serveur et index
		-Suppresion de l'affichage du nombre de résultats et du status dans la colonne de droite.

-------------------------------------------------------------------------------------------------------------------

Liste des modifications depuis le 02/06/2014 (0.1.0 à 0.1.1)
	-Fonctionalitées :

	-Interface Utilisateur :
		-Recherche quand la touche entrez est pressé
		-Fermeture de la modal Aggregation lors de validation
		-Mise a jour des template plus instinctive (a voir si c'est sufisant)
		-Ajout de la détections des champs du première indexs d'un alias
		-Simplification du parsing de la requête

	-Correction de bug :
		-Correction d'un bug lors de l'ajout d'un mot clés quand tout les indexs sont sélectionner.
		-Correction d'un bug lors du changement des carractère séparateurs dans le header csv des résultats.
		-Gestion des champs de type multifield dans le mapping.

	-Feature beta :
		-Debut des graphiques
		-Ajout de l'export csv des aggrégations
		-Ajout des context (cacher pour le moment)

-------------------------------------------------------------------------------------------------------------------

Liste des modifications depuis le 27/05/2014 (0.0.2 à 0.1.0) :

	-Fonctionalitées :
		-Ajout du support des alias sur les indexs
		-Ajout d'un bouton permettant de créer un mots clé rapidement depuis la requête et l'index courant
		-Ajout d'un bouton permettant de cacher ou d'afficher tous les champs lors de l'export csv