@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div >
 		<div class="navbar-header">
-			<a href="http://git.test.services.local/dt_ct_ioda/curiosity_v2/tree/master" class="navbar-brand" target="_blank">Curiosity <small>{{ data.version }}</small></a>			
+			<a href="https://github.com/pagesjaunes/curiosity" class="navbar-brand" target="_blank">Curiosity <small>{{ data.version }}</small></a>			
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
@@ -16,7 +16,7 @@
 					 <ul class="dropdown-menu">
 					 	<li><a href="#" ng-click="data.tab = 3">{{ info.txt.header.navBar.Keywords }}</a></li>
             			<li><a href="#" ng-click="data.tab = 5">{{ info.txt.header.navBar.Templates }}</a></li>
-            			<li><a href="#" ng-click="data.tab = 6">{{ info.txt.header.navBar.BugReport }}</a></li>
+            			<!--<li><a href="#" ng-click="data.tab = 6">{{ info.txt.header.navBar.BugReport }}</a></li>!-->
 					 </ul>
 				</li>
 			</ul>
