@@ -1,126 +1,126 @@
 var global_text = {
 	header : {
-		Server : "Serveur",
-		New : "Nouveau",
-		Hide : "Cacher",
-		AddServer : "Ajouter un nouveau serveur",
-		Connect : "Connexion",
+		Status : "Status", 
+		Server : "Server",
+		New : "New",
+		Hide: "Hide",
+		AddServer : "Add a new server",
+		Connect : "Connect",
 		Index : "Index",
-		AllIndex : "Tous les Index",
-		Search : "Rechercher",
-		AutoRefresh : "Rafraichissement auto.",
-		Hits : "Résultats : ",
-		Error : "Erreur",
-		Status : "Status",
-		NoError : "OK",
-		Customization : "Personnalisation",
-		NewServerTitle : "Cacher / Montrer le formulaire d'ajout d'un nouveau serveur",
-		ConnectTitle : "Etablir la connexion avec le nouveau serveur",
+		AllIndex : "All Index",
+		Search : "Search",
+		AutoRefresh : "AutoRefresh",
+		Hits : "Hits : ",
+		Error : "Error",
+		NoError : "Ok",
+		Customization : "Customization",
+		NewServerTitle : "Hide / Show new server form",
+		ConnectTitle : "Establish the connection with the server",
 		navBar : {
-			Request : "Requête",
-			Aggregations : "Agrégations",
-			Results : "Résultats",
-			Keywords : "Mots Clés",
-			Templates : "Templates", 
-			BugReport : "Rapport de bug / suggestions"
+			Request : "Request",
+			Aggregations : "Aggregations",
+			Results : "Results",
+			Keywords : "Keywords",
+			Templates : "Templates",
+			BugReport : "Bug report / suggestions"
 		}
 	},
 	aggregation : {
-		Fields : "Champs",
-		Aggregations : "Agrégations",
-		Hide :  "Cacher",
-		Ok : "Valider",
-		AddAgg : "Ajouter Agrégation",
-		ShowAll : "Voir tout",
+		Fields : "Fields",
+		Aggregations : "Aggregations",
+		Hide :  "Hide",
+		Ok : "Ok",
+		AddAgg : "Add Aggregation",
+		ShowAll : "Show All",
 		aggregation_renderer : {
 			Type : "Type",
-			Field : "Champ"
+			Field : "Field"
 		}
 	},
 	keyword : {
 		Index : "Index",
-		Save : "Sauvegarder", 
-		Add : "Ajouter"
+		Save : "Save", 
+		Add : "Add"
 	},
 	mapping : {
-		DocumentT : "Type de document"
+		DocumentT : "Document Type"
 	},
 	request : {
-		ShowAll : "Voir tout",
-		Hide : "Cacher", 
-		SimplifiedRequest:"Requête simplifiée",
-		ComplexeRequest:"Requête complexe",
-		ResultPerPage:"Résultats par page",
-		Search:"Rechercher",
-		JsonQuery: "Requête Json",
-		Keywords: "Mots Clés",
-		Fields:"Champs",
-		ShowAllFieldTitle : "Montrer / Cacher tous les champs",
-		ShowAllKeywordTitle : "Montrer / Cacher tout les mots clés",
+		ShowAll : "Show All",
+		Hide : "Hide", 
+		SimplifiedRequest:"Simplified Request",
+		ComplexeRequest:"Complexe Request",
+		ResultPerPage:"Result per page",
+		Search:"Search",
+		JsonQuery: "Json Query",
+		Keywords: "Keywords",
+		Fields:"Fields",
+		ShowAllFieldTitle : "Show / Hide all fields",
+		ShowAllKeywordTitle : "Show / Hide all keywords",
 	},
 	result : {
 		request_sub_tab : {
-			Results : "Résultats",
-			Aggregation :"Agrégation",
+			Results : "Results",
+			Aggregation :"Aggregation",
 			Template : "Template",
-			AdvancedRequest : "Requête avancée",
-			ResultList : "Liste des résultats",
-			JsonResult : "Résultats Json",
-			First: "Début",
-			Csv: "Export CSV",
-			Prev: "Précédent",
-			Next: "Suivant",
-			Last: "Fin",
+			AdvancedRequest : "Advanced Request",
+			ResultList : "Results list",
+			JsonResult : "JsonResult",
+			First: "First",
+			Csv: "To CSV",
+			Prev: "Prev",
+			Next: "Next",
+			Last: "Last",
 			Page: "Page",
-			Go : "Aller à",
-			AggregationFilter : "Filtres d'agrégation",
-			Or:"Ou",
-			And:"Et",
-			Not:"Non", 
+			Go : "Go",
+			AggregationFilter : "Aggregation Filter",
+			Or:"Or",
+			And:"And",
+			Not:"Not", 
 		}
 	},
 	template : {
-		ResultItems : "Objets Résultats",
-		Aggregations : "Agrégations",
+		ResultItems : "Result Items",
+		Aggregations : "Aggregations",
 		aggregation_sub_tab :{
 			Association : "Association",
-			AggregationType : "Type d'agrégation",
+			AggregationType : "Aggregation Type",
 			Template : "Template",
-			Default : "Défaut",
-			Update : "Mettre à jour",
-			Edit: "Edition",
-			New: "Nouveau",
-			Save: "Sauvegarder",
-			Delete: "Supprimer",
-			TemplateName : "Nom du Template"
+			Default : "Default",
+			Update : "Update",
+			Edit: "Edit",
+			New: "New",
+			Save: "Save",
+			Delete: "Delete",
+			TemplateName : "Template's name"
 		},
 		result_items_sub_tab :{
 			Template : "Template",
-			New: "Nouveau",
-			Save: "Sauvegarder",
-			Delete: "Supprimer",
-			TemplateName : "Nom	du Template",
-			Fields : "Champs"
+			New: "New",
+			Save: "Save",
+			Delete: "Delete",
+			TemplateName : "Template's name",
+			Fields : "Field"
 		}
 	},
 	bugReport : {
 		Contact:"Contact",
-		Title:"Titre",
-		Send:"Envoyer"
+		Title:"Title",
+		Send:"Send"
 	},
 	csvModal : {
-		CsvExport : "Export CSV",
-		Sep : "Séparateur de champs",
-		TabSep : "Séparateur de multi-champs",
-		Name : "Nom",
+		CsvExport : "CSV Export",
+		Sep : "Sep",
+		TabSep : "TabSep",
+		Name : "Name",
 		Alias : "Alias",
-		Show :  "Voir",
-		Hide : "Cacher",
-		CurrentResult : "Résultats actuels",
-		CurrentResultTitle : "Exporter les résultas actuels au format csv",
-		SomeResult : "Nombre de Résultats",
-		SomeResultTitle : "Exporter une partie de tous les résultats au format csv",
-		FullResultTitle : "Exporter tous les résultats au format csv !!! Attention l'export d'un grand nombre de résultats peut durer longtemps et avoir un impact sur les perfomances du serveur !!!",
-		FullResult : "Tous les Résultats",
-	},
+		Show :  "Show",
+		Hide : "Hide",
+		CurrentResult : "CurrentResult",
+		CurrentResultTitle : "Export current result to csv file",
+		SomeResult : "Some Result",
+		SomeResultTitle : "Export some of the result (nb) to csv file",
+		FullResultTitle : "Export all result to csv File !!! Warning : can take a large ammount of time and ressource if there is a lot of results",
+		FullResult : "Full Result",
+	}
 }
